--- a/images/icons.svg/icomoon (7)/style.css
+++ b/images/icons.svg/icomoon (7)/style.css
@@ -27,10 +27,14 @@ Single-colored icons can be modified like so:
   width: 1.857421875em;
 }
 
-.icon-Logo4 {
-  width: 1.857421875em;
+.icon-logo4 {
+  width: 1.9091796875em;
 }
 
 .icon-Logo5 {
+  width: 1.857421875em;
+}
+
+.icon-Logo6 {
   width: 1.857421875em;
 }
