--- a/css/styles.css
+++ b/css/styles.css
@@ -147,6 +147,18 @@ body   {
 .link-menu{
     padding: 24px 0;
     position: relative;
+    color: #404bbf;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+::after{
+ content: "";
+ position: absolute;
+ left: 0;
+ bottom: -1px;
+ height: 4px;
+ background-color: #404bbf;
+ border-radius: 2px;
 }
 
 .menu-address__item:not(:last-child){
@@ -170,6 +182,7 @@ body   {
     font-weight: 400;
     font-size: 16px;
     color: #434455;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contact-phone-number:hover,
@@ -205,7 +218,7 @@ body   {
     background-image:linear-gradient(
         rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)),
-    url("../images/BG/people-office\ 1.png");
+    url("../images/BG/people-office.jpg");
     background-repeat: no-repeat; 
     background-position: center; 
     background-size: cover;
@@ -256,6 +269,7 @@ body   {
     border-radius: 4px;
     padding: 16px 32px;
     min-width: 169px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 } 
 
 .button-btn:hover,
@@ -372,7 +386,9 @@ body   {
     /* margin-bottom:32px; */
 }
 
-
+.social-link__four{
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+}
 .section-four   {
     background: #F4F4FD;
     letter-spacing: 0.02em;
@@ -468,7 +484,7 @@ body   {
     
 }
 .customers-title { 
-    line-height: 1.1;
+    line-height: 1.11;
 }
 .customers-list {
     display: flex;
@@ -512,7 +528,9 @@ body   {
     color: #404bbf;
 }
 
-
+.social-icon{
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 
 
     /* FOOTER */
@@ -610,7 +628,7 @@ body   {
 
 }
 .social-icon__footer{
-    /* fill:currentColor; */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     fill: var(--primary-third-text)
 }
 .social-icon__footer,
@@ -618,7 +636,22 @@ body   {
     color: #f4f4fd;
 }
 
-     
+/* modal */
+.data-modal{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(46, 47, 66, 0.4);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+     .is-hidden{
+        opacity: 0;
+        visibility: hidden;
+        pointer-events: none;
+        
+     }
 
 
 
