--- a/css/styles.css
+++ b/css/styles.css
@@ -528,7 +528,7 @@ body   {
     color: #404bbf;
 }
 
-.social-icon{
+.icon-link{
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
