--- a/css/styles.css
+++ b/css/styles.css
@@ -507,7 +507,9 @@ body   {
     border: 1px solid #8E8F99;
     border-radius: 4px;
     padding: 15px 32px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .customers__item {
 /* .customers-link { */
@@ -529,8 +531,8 @@ body   {
 }
 
 .icon-link{
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
+    /* transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+} */
 
 
     /* FOOTER */
