--- a/css/styles.css
+++ b/css/styles.css
@@ -507,7 +507,7 @@ body   {
     border: 1px solid #8E8F99;
     border-radius: 4px;
     padding: 15px 32px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 }
 
 
@@ -530,16 +530,17 @@ body   {
     color: #404bbf;
 }
 
-.icon-link{
-    /* transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
+/* .icon-link{
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}  */
 
 
     /* FOOTER */
 
 .footer {
     padding: 100px 0;
-}    
+} 
+
 .container__footer{
     display: flex;
     align-items: baseline;
