--- a/css/styles.css
+++ b/css/styles.css
@@ -524,15 +524,17 @@ body   {
 
     /* fill:var(--primary-third-text); */
 }
+
+
 .customers-link:hover,
 .customers-link:focus {
     border-color: #404bbf;
     color: #404bbf;
 }
 
-/* .icon-link{
+.social-item{
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}  */
+} 
 
 
     /* FOOTER */
@@ -623,7 +625,7 @@ body   {
     align-items: center;
     justify-content: center;
     color: #FFFFFF;
-     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
 }
 
 .social-link_footer:hover,
