--- a/css/styles.css
+++ b/css/styles.css
@@ -666,6 +666,14 @@ div[data-modal]{
     transform: translate(-50%, -50%) scale(1);
     width: 408px;
     min-height: 584px;
+    background: #fcfcfc;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-button {
+    
 }
 
 
