--- a/css/styles.css
+++ b/css/styles.css
@@ -795,7 +795,7 @@ div[data-modal]{
     color: #434455;
     letter-spacing: 0.02em;
 }
-.container__footer{
+.container-footer{
     margin-right: 120px;
 }
 
