--- a/css/styles.css
+++ b/css/styles.css
@@ -493,6 +493,7 @@ body   {
     /* flex-direction: row; */
     /* padding: 0px; */
     gap:24px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     /* max-width:1128px; */
     
 }   
@@ -532,9 +533,9 @@ body   {
     color: #404bbf;
 }
 
-.social-item{
+/* .social-item{ */
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} 
+/* }  */
 
 
     /* FOOTER */
@@ -564,6 +565,7 @@ body   {
 .logo-footer__link {
     display: inline-block;
     margin-bottom: 16px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .logo-studio-footer   {
@@ -673,6 +675,18 @@ div[data-modal]{
 }
 
 .modal-button {
+    position: absolute;
+    top: 24px;
+    right: 24px;
+    border-radius: 50%; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1); 
+    padding: 0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 
 }
 
@@ -681,11 +695,15 @@ div[data-modal]{
 }
 
 .modal-button-icon:hover {
+    background-color: #404bbf;
+    border: none;
     fill: #ffffff;
 }
 
 .modal-button-icon:focus {
     fill: #ffffff;
+    background-color: #404bbf;
+    border: none;
 }
 
 /* =============PORTFOLIO============= */
