--- a/css/styles.css
+++ b/css/styles.css
@@ -692,13 +692,15 @@ div[data-modal]{
 
 .modal-button-icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+     width: 24;
+    height: 24;
 }
 
-.modal-button-icon:hover
-.modal-button-icon:focus {
+.modal-window:hover
+.modal-window:focus {
     background-color: #404bbf;
     border: none;
-    fill: #ffffff;
+    
 }
 
 
