--- a/css/styles.css
+++ b/css/styles.css
@@ -692,15 +692,13 @@ div[data-modal]{
 
 .modal-button-icon {
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-     width: 24;
-    height: 24;
 }
 
-.modal-window:hover
-.modal-window:focus {
+.modal-button-icon:hover
+.modal-button-icon:focus {
     background-color: #404bbf;
     border: none;
-    
+    fill: #ffffff;
 }
 
 
@@ -826,5 +824,3 @@ div[data-modal]{
 }
 
 /* =============PORTFOLIO============= */
-
-
