--- a/css/styles.css
+++ b/css/styles.css
@@ -494,7 +494,7 @@ body   {
     /* padding: 0px; */
     gap:24px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    /* max-width:1128px; */
+    
     
 }   
             
@@ -635,9 +635,10 @@ body   {
     background: #31D0AA; 
 
 }
-.social-icon__footer{
+.social-icon{
     /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-    fill: var(--primary-third-text);
+    fill: #f4f4fd;
+
 }
 .social-icon__footer,
 .social-icon__footer{
