--- a/css/styles.css
+++ b/css/styles.css
@@ -493,7 +493,7 @@ body   {
     /* flex-direction: row; */
     /* padding: 0px; */
     gap:24px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
     
     
 }   
@@ -508,6 +508,7 @@ body   {
     border: 1px solid #8E8F99;
     border-radius: 4px;
     padding: 15px 32px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 }
 
@@ -627,7 +628,7 @@ body   {
     align-items: center;
     justify-content: center;
     color: #FFFFFF;
-     /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-link_footer:hover,
@@ -635,14 +636,15 @@ body   {
     background: #31D0AA; 
 
 }
-.social-icon{
+/* .social-icon{
     /* transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-    fill: #f4f4fd;
+    /* fill: #f4f4fd; */
 
-}
-.social-icon__footer,
+/* } */ */
 .social-icon__footer{
     color: #f4f4fd;
+    width: 24px;
+    height: 24px;
 }
 
 /* modal */
