--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,10 @@ h4,
 h5,
 h6,
 p {
+    
     margin: 0;
+    margin-left: auto;
+    margin-right: auto;
     
 } 
 
@@ -50,6 +53,7 @@ address {
 }
 
 .button-btn {
+    display:block ;
     cursor: pointer;
     font: inherit;
     padding: 0;
