--- a/css/styles.css
+++ b/css/styles.css
@@ -633,11 +633,14 @@ body   {
     justify-content: center;
     color: #FFFFFF;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 24px;
+    height: 24px;
 }
 
 .social-link_footer:hover,
 .social-link_footer:focus  {
     background: #31D0AA; 
+    color: #f4f4fd;
 
 }
 /* .social-icon{
@@ -645,15 +648,17 @@ body   {
     /* fill: #f4f4fd; */
 
 /* } */ */
-.social-icon__footer{
+/* .social-icon__footer{
     /* color: #f4f4fd; */
     width: 24px;
     height: 24px;
-}
+/* } */ */
+
+/* 
 .social-icon__footer:hover
 .social-icon__footer:focus{
     color: #f4f4fd;
-}
+} */
 
 /* modal */
 div[data-modal]{
