--- a/css/styles.css
+++ b/css/styles.css
@@ -481,12 +481,12 @@ body   {
     padding: 120px 0 120px;
 }
 
-/* .container-customers{
+.container-customers{
     /* padding-top: 120px;
     padding-bottom: 120px; */
     
     
- */
+}
 .customers-title { 
     line-height: 1.11;
 }
@@ -515,8 +515,8 @@ body   {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
-.customers-link:hover
-.social-icon{
+.customers-link:hover,
+social-icon{
     fill: #f4f4fd;
 }
 .customers__item {
@@ -527,11 +527,11 @@ body   {
 }
 
 
-/* .social-icon{
+.social-icon{
     fill:currentColor;
 
     /* fill:var(--primary-third-text); */
- */
+}
 
 
 .customers-link:hover,
