--- a/css/styles.css
+++ b/css/styles.css
@@ -515,8 +515,7 @@ body   {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
-.customers-link:hover,
-social-icon{
+.customers-link:hover {
     fill: #f4f4fd;
 }
 .customers__item {
@@ -527,10 +526,12 @@ social-icon{
 }
 
 
-.social-icon{
-    fill:currentColor;
+.social-icon,.social-icon:hover,.social-icon:focus{
+  
+    fill: var(--primary-third-text);
+    stroke: none;
 
-    /* fill:var(--primary-third-text); */
+   
 }
 
 
