--- a/css/styles.css
+++ b/css/styles.css
@@ -701,6 +701,8 @@ div[data-modal]{
     position: absolute;
     top: 24px;
     right: 24px;
+    width: 24px;
+    height: 24px;
     border-radius: 50%; 
     display: flex;
     align-items: center;
@@ -717,8 +719,8 @@ div[data-modal]{
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-button-icon:hover
-.modal-button-icon:focus {
+.modal-button:hover,
+.modal-button:focus {
     background-color: #404bbf;
     border: none;
     fill: #ffffff;
