--- a/css/styles.css
+++ b/css/styles.css
@@ -164,7 +164,7 @@ body   {
 .link-menu{
     padding: 24px 0;
     position: relative;
-    color: #404bbf;
+    color: #2E2F42;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -270,6 +270,8 @@ body   {
 
 .hero__title {
     max-width: 496px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
@@ -415,7 +417,9 @@ body   {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    /* box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); */
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+   
     border-radius: 0px 0px 4px 4px;
     
     
@@ -511,10 +515,10 @@ body   {
     
     
 }   
-.icon-link:hover
-.icon-link:focus {
-    fill: #404BBF;
-}    
+
+
+
+
 
 
 
@@ -531,9 +535,7 @@ body   {
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);  
 }
 
-.customers-link:hover {
-    fill: #f4f4fd;
-}
+
 .customers__item {
 /* .customers-link { */
     width: calc((100% - 120px) / 6);
@@ -541,6 +543,10 @@ body   {
     color: #8E8F99;
 }
 
+.section-social-icons {
+    fill:#8e8f99;
+    
+}
 
 .social-icon,
 .social-icon:hover,
@@ -557,6 +563,12 @@ body   {
 .customers-link:focus {
     border-color: #404bbf;
     color: #404bbf;
+}
+
+.customers-link:hover  svg {
+
+    fill: #404BBF;
+   
 }
 
  .social-icon-footer{
@@ -709,6 +721,7 @@ div[data-modal]{
     min-height: 584px;
     background: #fcfcfc;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    
     border-radius: 4px;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -771,6 +784,9 @@ div[data-modal]{
     border-radius: 4px;
     letter-spacing: 0.04em;
     padding:11px 23px 11px;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     
 }
 
@@ -784,8 +800,11 @@ div[data-modal]{
     background: #404BBF;
     color: #FFFFFF;
     border: 1px solid transparent;
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+    /* box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12); */
+   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.10);
 
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .ifp__btn:hover,
 .ifp__btn:focus {
@@ -805,11 +824,15 @@ div[data-modal]{
 
 .item-works__link {
     display: block;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .item-works__link:hover,
 .item-works__link:focus  {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
