--- a/css/styles.css
+++ b/css/styles.css
@@ -579,6 +579,55 @@ body   {
     stroke: none;
 }
 
+
+/* overlay-box */
+
+.box {
+    position: relative;
+    overflow: hidden;
+}
+.overlay-box {
+    position: absolute;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #3f51b5;
+
+    transform: translateY(100%);
+    transition: transform 250ms ease-in-out;
+
+    opacity: .9;
+}
+
+
+
+.box:hover .overlay-box {
+  transform: translatex(0);
+}
+
+.overlay-text {
+    padding: 40px 32px;
+    color: var(--cloud, #F4F4FD);
+    font-size: 16px;
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.32px;
+}
+
+
+/* overlay-box */
+
+
+
+
+
+
+
+
     /* FOOTER */
 
 .footer {
@@ -840,7 +889,9 @@ div[data-modal]{
 
 .item-works {
     display: block;
-    width: calc((100% - 48px) / 3);
+    /* width */
+    /* width: calc((100% - 48px) / 3); */
+    width: calc((100% - 78px) / 3);
    flex-shrink:0;
  
 }
