--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,7 @@ body   {
 .link-menu {
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--primary-second-text);
+    color: #404bbf;;
     display: block;
     
 }
@@ -164,7 +164,7 @@ body   {
 .link-menu{
     padding: 24px 0;
     position: relative;
-    color: #2E2F42;
+     color: #404bbf;;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -540,7 +540,7 @@ body   {
 }
 
 .section-social-icons {
-    fill:#8e8f99;
+    fill:CurrentColor;
     
 }
 
@@ -834,9 +834,7 @@ div[data-modal]{
     border-radius: 4px;
     letter-spacing: 0.04em;
     padding:11px 23px 11px;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     
 }
 
@@ -874,8 +872,7 @@ div[data-modal]{
 
 .item-works__link {
     display: block;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .item-works__link:hover,
@@ -883,6 +880,7 @@ div[data-modal]{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transform: translateY(0%);
 }
 
 
