--- a/css/styles.css
+++ b/css/styles.css
@@ -582,42 +582,42 @@ body   {
 
 /* overlay-box */
 
-.box {
+
+.overlay-box {
     position: relative;
     overflow: hidden;
-}
-.overlay-box {
-    position: absolute;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #3f51b5;
-
-    transform: translateY(100%);
+    /* top: 0; */
+    /* left: 0;  */
+    /* width: 100%;  */
+    /* height: 100%; */
     transition: transform 250ms ease-in-out;
 
+    
+}
+
+
+ 
+
+
+.overlay-text {
+    position: absolute;
+    top: 0;
+    font-size: 16px;
+    line-height: 1.5; 
+    letter-spacing: 0.02em; 
+    color:  #f4f4fd; 
+    padding: 40px 32px;
+    height: 100%;
+    width: 100%;
+    transform: translateY(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color: #3f51b5;
     opacity: .9;
 }
 
-
-
-.box:hover .overlay-box {
-  transform: translatex(0);
-}
-
-.overlay-text {
-    padding: 40px 32px;
-    color: var(--cloud, #F4F4FD);
-    font-size: 16px;
-    font-family: Roboto;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5;
-    letter-spacing: 0.32px;
-}
-
+.overlay-box:hover .overlay-text {
+    transform: translateY(0%);
+} 
 
 /* overlay-box */
 
@@ -923,11 +923,9 @@ div[data-modal]{
     color: #434455;
     letter-spacing: 0.02em;
 }
-.container{
-    
-    align-items: baseline;
-}
 .container-footer{
+    display: flex;
+    align-items: baseline;
     margin-right: 120px;
 }
 
