--- a/css/styles.css
+++ b/css/styles.css
@@ -611,7 +611,7 @@ body   {
     width: 100%;
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    background-color: #3f51b5;
+    background-color: #4d5ae5;
     opacity: .9;
 }
 
