--- a/css/styles.css
+++ b/css/styles.css
@@ -153,10 +153,7 @@ body   {
     display: block;
     
 }
-/* .active::after{
-    border-radius: 4rem;
-    padding: 1rem;
-} */
+
 
 .menu-link:not(:last-child) { 
     margin-right: 0;
@@ -167,6 +164,7 @@ body   {
     color: var(--navyblue, #2E2F42);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 
 .link-menu::after {
  content: "";
@@ -179,6 +177,12 @@ body   {
  border-radius: 2px;
 
  transition: transform 250ms ease-in-out;
+}
+.active::after{
+    color: #404BBF;
+    width: 100%;
+    transition: transform 250ms ease-in-out;
+
 }
 .link-menu:hover::after {
     width: 100%;
