--- a/css/styles.css
+++ b/css/styles.css
@@ -165,7 +165,9 @@ body   {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-
+.active{
+    color:#404BBF;
+}
 .link-menu::after {
  content: "";
  position: absolute;
@@ -179,7 +181,7 @@ body   {
  transition: transform 250ms ease-in-out;
 }
 .active::after{
-    color: #404BBF;
+    /* color: #404BBF; */
     width: 100%;
     transition: transform 250ms ease-in-out;
 
